--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     })(window,document,'script','dataLayer','GTM-M7JR6X5');
   </script>
   <!-- End Google Tag Manager -->
-  <title>Portfolio</title>
+  <title>Brian G.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata:300,400,500,bold&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.0d8b1457a669af9d4dde.css"></head>
+<link rel="stylesheet" href="styles.ed630277cca02f7b69cb.css"></head>
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript>
@@ -25,5 +25,5 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
-<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.6a758a594e1773bb196a.js" type="module"></script><script src="main-es5.6a758a594e1773bb196a.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.b0e16dcc9f1b32672b69.js" type="module"></script><script src="main-es5.b0e16dcc9f1b32672b69.js" nomodule defer></script></body>
 </html>
